--- a/src/CustomVisuals/Published/BrickChart/package.json
+++ b/src/CustomVisuals/Published/BrickChart/package.json
@@ -7,14 +7,24 @@
     "async": "^0.1.22",
     "d3": "^3.5.5",
     "globalize": "0.1.0-a2",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.10",
-    "powerbi-visuals-utils-chartutils": "^0.3.0",
-    "powerbi-visuals-utils-dataviewutils": "^1.0.1",
-    "powerbi-visuals-utils-formattingutils": "^0.2.2",
-    "powerbi-visuals-utils-interactivityutils": "^0.2.1",
-    "powerbi-visuals-utils-svgutils": "^0.2.1",
-    "powerbi-visuals-utils-tooltiputils": "^0.3.2",
-    "powerbi-visuals-utils-typeutils": "^0.2.1"
+    "jquery": "^3.4.0",
+    "lodash": "^4.17.15",
+    "powerbi-models": "^1.3.0",
+    "powerbi-visuals-tools": "^2.6.0",
+    "powerbi-visuals-utils-chartutils": "1.5.1",
+    "powerbi-visuals-utils-dataviewutils": "1.5.0",
+    "powerbi-visuals-utils-formattingutils": "3.1.0",
+    "powerbi-visuals-utils-interactivityutils": "^3.0.0",
+    "powerbi-visuals-utils-svgutils": "1.2.0",
+    "powerbi-visuals-utils-tooltiputils": "1.1.1",
+    "powerbi-visuals-utils-typeutils": "1.2.0"
+  },
+  "devDependencies": {
+    "tslint": "^5.20.1",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "next"
+  },
+  "scripts": {
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   }
 }
