--- a/src/CustomVisuals/Published/BrickChart/tsconfig.json
+++ b/src/CustomVisuals/Published/BrickChart/tsconfig.json
@@ -8,7 +8,7 @@
     "out": "./.tmp/build/visual.js"
   },
   "files": [
-    ".api/v2.3.0/PowerBI-visuals.d.ts",
+    ".api/v2.5.0/PowerBI-visuals.d.ts",
     "src/visual.ts",
     "node_modules/powerbi-visuals-utils-dataviewutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-formattingutils/lib/index.d.ts",
@@ -16,6 +16,7 @@
     "node_modules/powerbi-visuals-utils-svgutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-typeutils/lib/index.d.ts",
     "node_modules/powerbi-visuals-utils-chartutils/lib/index.d.ts",
-    "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts"
+    "node_modules/powerbi-visuals-utils-tooltiputils/lib/index.d.ts",
+    "node_modules/powerbi-models/dist/models-noexports.d.ts"
   ]
 }
