--- a/src/CustomVisuals/Published/TextWrapper/package.json
+++ b/src/CustomVisuals/Published/TextWrapper/package.json
@@ -4,15 +4,26 @@
   "description": "Text Wrapper",
   "main": "index.js",
   "dependencies": {
-    "d3": "^3.5.5",
+    "d3": "3.5.5",
     "d3-selection": "^1.0.2",
-    "jquery": "^3.3.1",
-    "lodash": "^4.15.0",
-    "powerbi-visuals-utils-formattingutils": "^0.4.0"
+    "jquery": "3.4.0",
+    "lodash": "4.17.15",
+    "powerbi-models": "1.1.0",
+    "powerbi-visuals-tools": "2.6.0",
+    "powerbi-visuals-utils-formattingutils": "3.1.0",
+    "powerbi-visuals-utils-svgutils": "1.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/d3": "^3.5.36",
+    "@types/jquery": "^3.3.29",
+    "@types/lodash": "4.14.121",
+    "tslint": "^5.20.0",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "next"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "repository": {
     "type": "git",
