--- a/src/CustomVisuals/Published/CalendarVisual/package.json
+++ b/src/CustomVisuals/Published/CalendarVisual/package.json
@@ -11,21 +11,21 @@
     "d3": "^3.5.5",
     "fullcalendar": "^3.9.0",
     "jquery": "^3.3.1",
-    "powerbi-models": "^1.1.0",
+    "powerbi-models": "1.1.0",
     "powerbi-visuals-tools": "^2.6.0",
-    "powerbi-visuals-utils-chartutils": "1.10.0",
-    "powerbi-visuals-utils-colorutils": "^1.2.0",
-    "powerbi-visuals-utils-dataviewutils": "^1.2.0",
-    "powerbi-visuals-utils-formattingutils": "^3.1.0",
-    "powerbi-visuals-utils-interactivityutils": "^4.2.0",
-    "powerbi-visuals-utils-svgutils": "^1.2.0",
-    "powerbi-visuals-utils-tooltiputils": "^1.1.1",
-    "powerbi-visuals-utils-typeutils": "^1.1.0",
+    "powerbi-visuals-utils-chartutils": "1.9.0",
+    "powerbi-visuals-utils-colorutils": "1.2.0",
+    "powerbi-visuals-utils-dataviewutils": "1.5.0",
+    "powerbi-visuals-utils-formattingutils": "3.1.0",
+    "powerbi-visuals-utils-interactivityutils": "4.3.0",
+    "powerbi-visuals-utils-svgutils": "1.2.0",
+    "powerbi-visuals-utils-tooltiputils": "1.1.1",
+    "powerbi-visuals-utils-typeutils": "1.2.0",
     "typescript-base64-arraybuffer": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "10.3.4",
-    "tslint": "^5.19.0",
+    "tslint": "^5.20.1",
     "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.6.2"
   },
