--- a/src/CustomVisuals/Published/TextEnhancer/package.json
+++ b/src/CustomVisuals/Published/TextEnhancer/package.json
@@ -9,18 +9,20 @@
     "d3": "^3.5.5",
     "d3-selection": "^1.0.2",
     "jquery": "^3.3.1",
-    "lodash": "^4.15.0",
+    "lodash": "^4.17.14",
     "powerbi-visuals-utils-dataviewutils": "^1.5.0",
     "powerbi-visuals-utils-formattingutils": "^3.1.0",
     "powerbi-visuals-utils-svgutils": "^1.2.0",
     "powerbi-visuals-utils-typeutils": "^1.2.0"
   },
   "devDependencies": {
-    "tslint": "^5.16.0",
+    "powerbi-visuals-tools": "^2.6.0",
+    "tslint": "^5.19.0",
     "tslint-microsoft-contrib": "^6.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   },
   "repository": {
     "type": "git",
