--- a/src/CustomVisuals/Published/FunnelWithSource/package.json
+++ b/src/CustomVisuals/Published/FunnelWithSource/package.json
@@ -2,8 +2,24 @@
   "name": "visual",
   "dependencies": {
     "d3": "^3.5.5",
-    "powerbi-visuals-utils-colorutils": "^0.2.2",
-    "powerbi-visuals-utils-formattingutils": "^1.0.0",
-    "powerbi-visuals-utils-chartutils": "^0.3.0"
+    "jquery": "3.4.0",
+    "lodash": "^4.17.15",
+    "powerbi-models": "^1.3.0",
+    "powerbi-visuals-tools": "^2.6.0",
+    "powerbi-visuals-utils-chartutils": "1.9.0",
+    "powerbi-visuals-utils-colorutils": "1.2.0",
+    "powerbi-visuals-utils-formattingutils": "3.1.0",
+    "powerbi-visuals-utils-tooltiputils": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/d3": "^3.5.36",
+    "@types/jquery": "^3.3.31",
+    "@types/node": "10.3.2",
+    "tslint": "^5.20.1",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "3.4.5"
+  },
+  "scripts": {
+    "lint": "tslint -c tslint.json -p tsconfig.json"
   }
 }
